refactor(Core): Modernize codebase, fix bugs, and improve dependencies
This commit introduces a wide range of improvements focused on modernizing the plugin for current Spigot/Paper versions (1.21+), enhancing code quality, and improving dependency management. The primary goal is to reduce technical debt and increase long-term stability and maintainability.

Key changes include:

### API Modernization & Deprecation Fixes
- Replaced deprecated `Bukkit.getOfflinePlayer(String)` with UUID-based methods.
- Updated `YamlConfigurationOptions.header()` to its modern equivalent.
- Migrated from `new JsonParser()` to the static `JsonParser.parseString()`.
- Replaced deprecated `new URL()` constructors with the safer `new URI().toURL()` pattern.
- Updated `ItemMeta.hasCustomModelData()` checks.
- Removed an obsolete Spigot bug patch that used `sun.misc.Unsafe`.
- Replaced deprecated `Class.newInstance()` with `getConstructor().newInstance()`.

### Code Quality and Bug Fixes
- Eliminated unused fields, methods, and imports across the project.
- Added null-safety checks and `instanceof` guards to prevent potential `NullPointerException`s and `ClassCastException`s in `Loader.java`.
- Fixed a resource leak in `PlayerVaults.java` by implementing a try-with-resources block.
- Optimized the `SignListener` by reordering checks to be more performant.
- Standardized user-facing messages in `DeleteCommand` and `VaultOperations` for better consistency.

### Dependency Management
- Externalized the Typesafe Config library. It is no longer shaded within the project's source tree and is now managed as a proper Maven dependency. This cleans up the repository, simplifies the build process, and improves dependency resolution.

All changes have been compiled and tested on PaperMC 1.21.8.